circ-2292-Request-Anonymization improve maintainability, remove unused virables and remove commented out lines.